# tapayoka_pi

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
kiosk_state/: state.json
src/: ble_peripheral.py  config.py  eth_wallet.py  kiosk_server.py  kiosk_state.py  led_service.py  main.py  ws_peripheral.py
tests/: test_ble_peripheral.py  test_eth_wallet.py  test_led_service.py
